@@ -1,4 +1,5 @@
 == 0.7.1 Fancy Pants release
+ * Ruby 1.8.5 compatibility, closes #49 [Wincent Colaiuta]
  * Move all EventMachine stuff out of Server, you can now create a Thin Backend that
    does not depend on EventMachine.
  * Rename Connector to Backend. Extend Thin::Backends::Base to implement your own.
